--- a/package/django_sms_twilio/MANIFEST.in
+++ b/package/django_sms_twilio/MANIFEST.in
@@ -1,5 +1,5 @@
 include LICENSE
-include README.rst
+include README.md
 include requirements.txt
 recursive-include sms_twilio/migrations *
 recursive-include sms_twilio/templates *
