--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ twilio = "==6.5.0"
 coverage = "==4.4.1"
 django-debug-toolbar = "*"
 ipdb = "==0.10.3"
+"49bbba5" = {path = "./sms/dependencies/django_toolbox-0.3.1.tar.gz"}
 
 
 [dev-packages]
